<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Antihump</string>
    <string name="service_notification_channel">Posture detector</string>
    <string name="service_notification_text">The application works in background and it will be notifying you about wrong posture. Click here to exit</string>
    <string name="notification_channel">Posture notifications</string>
    <string name="notification_text">Your posture is incorrect. Straighten up!</string>
    <string name="dialog_title">Camera access</string>
    <string name="dialog_explanation">This application uses camera access to calculate your posture</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_problem">This application needs camera access to work properly</string>
    <string name="activity_button_calibrate">Calibrate</string>
    <string name="activity_status_text">Straighten up!</string>
    <string name="bottom_navigation_item_preview">Preview</string>
    <string name="bottom_navigation_item_statistics">History</string>
    <string name="loginactivity_header">Log in to your profile</string>
    <string name="loginactivity_button_login">Log in</string>
    <string name="loginactivity_email">E-mail</string>
    <string name="loginactivity_password">Password</string>
    <string name="loginactivity_error">Incorrect e-mail or password</string>
    <string name="profile_dialog_account">Account</string>
    <string name="profile_dialog_defaultname">Not logged in</string>
    <string name="profile_dialog_loginbutton">Log in</string>
    <string name="profile_dialog_registerbutton">Register</string>
    <string name="profile_dialog_logout">Logout</string>
    <string name="registeractivity_header">Register new account</string>
    <string name="registeractivity_button_login">Sign up</string>
    <string name="registeractivity_first_name">First name</string>
    <string name="registeractivity_last_name">Last name</string>
    <string name="registeractivity_account_exists">Account with this email already exists</string>
</resources>