<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="64dp"
      android:text="@string/loginactivity_header"
      android:textAlignment="center"
      android:textSize="20sp"
      app:layout_constraintBottom_toTopOf="@+id/email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:hint="@string/loginactivity_email"
      android:inputType="textEmailAddress"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.4" />

  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="32dp"
      android:inputType="textPassword"
      android:hint="@string/loginactivity_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email" />

  <com.google.android.material.button.MaterialButton
      style="@style/Widget.Material3.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/loginactivity_no_account_question"
      app:layout_constraintBottom_toBottomOf="@+id/materialButton"
      app:layout_constraintEnd_toStartOf="@+id/materialButton"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/password"
      app:layout_constraintTop_toTopOf="@+id/materialButton"
      app:layout_constraintVertical_bias="1.0" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/materialButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="4dp"
      android:onClick="onLoginButtonClick"
      android:ellipsize="end"
      android:text="@string/loginactivity_button_login"
      app:layout_constraintEnd_toEndOf="@+id/password"
      app:layout_constraintTop_toBottomOf="@+id/password" />

  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="@+id/materialButton"
      app:layout_constraintEnd_toStartOf="@+id/materialButton"
      app:layout_constraintTop_toTopOf="@+id/materialButton" />

</androidx.constraintlayout.widget.ConstraintLayout>